--- a/src/assets/styles/amaro.css
+++ b/src/assets/styles/amaro.css
@@ -4234,7 +4234,29 @@ input[type="button"].btn-block {
   background-color: #fff;
   background-clip: border-box;
   border: 0 solid rgba(0, 0, 0, 0);
-  border-radius: 0;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.card:before,
+.card:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background: #fff;
+  transition: 0.5s;
+  z-index: -1;
+}
+.card:hover:before {
+  transform: rotate(20deg);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+.card:hover:after {
+  transform: rotate(10deg);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
 .card > hr {
   margin-right: 0;
@@ -4252,7 +4274,7 @@ input[type="button"].btn-block {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
-  height: 150px;
+  min-height: 150px;
 }
 .card-title {
   margin-bottom: 0.75rem;
@@ -4946,7 +4968,7 @@ a.badge-muted.focus {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 0.75rem 1.25rem;
+  padding: 0.75rem;
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.075);
@@ -5013,6 +5035,9 @@ a.badge-muted.focus {
   }
 }
 @media (min-width: 768px) {
+  .card {
+    width: 360px;
+  }
   .list-group-horizontal-md {
     -ms-flex-direction: row;
     flex-direction: row;
@@ -5034,6 +5059,9 @@ a.badge-muted.focus {
   }
 }
 @media (min-width: 992px) {
+  .card {
+    width: 270px;
+  }
   .list-group-horizontal-lg {
     -ms-flex-direction: row;
     flex-direction: row;
@@ -13249,7 +13277,7 @@ img.bg-image {
 }
 
 .jumbotron {
-  background: url(../beautiful-beauty-casual-2229490-1.jpg);
+  background: url(../backgrounds/beautiful-beauty-casual-2229490-1.jpg);
   background-size: cover;
   height: 620px;
 }
