--- a/src/assets/styles/amaro.css
+++ b/src/assets/styles/amaro.css
@@ -1308,6 +1308,10 @@ pre code {
   }
 }
 @media (min-width: 1200px) {
+  .card {
+    width: 250px;
+  }
+
   .col-xl {
     -ms-flex-preferred-size: 0;
     flex-basis: 0;
@@ -4274,7 +4278,7 @@ input[type="button"].btn-block {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
-  min-height: 150px;
+  min-height: 250px;
 }
 .card-title {
   margin-bottom: 0.75rem;
@@ -4968,7 +4972,7 @@ a.badge-muted.focus {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 0.75rem;
+  padding: 0.5rem;
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.075);
@@ -5036,7 +5040,7 @@ a.badge-muted.focus {
 }
 @media (min-width: 768px) {
   .card {
-    width: 360px;
+    width: 260px;
   }
   .list-group-horizontal-md {
     -ms-flex-direction: row;
@@ -5060,7 +5064,7 @@ a.badge-muted.focus {
 }
 @media (min-width: 992px) {
   .card {
-    width: 270px;
+    width: 317px;
   }
   .list-group-horizontal-lg {
     -ms-flex-direction: row;
@@ -10506,6 +10510,9 @@ a.text-muted:focus {
   .banner {
     min-height: 450px;
   }
+  .card {
+    width: calc(100vh / 5);
+  }
 }
 .card-scale {
   position: relative;
@@ -11910,447 +11917,6 @@ select.selectpicker {
 .swiper-outside-nav.align-with-products .swiper-button-next {
   top: 120px;
 }
-@media (max-width: 991.98px) {
-  [data-aos-delay] {
-    transition-delay: 0s !important;
-  }
-}
-.pswp {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  outline: none;
-  -ms-touch-action: none;
-  touch-action: none;
-  z-index: 1500;
-  -webkit-text-size-adjust: 100%;
-  -webkit-backface-visibility: hidden;
-}
-.pswp * {
-  box-sizing: border-box;
-}
-.pswp img {
-  max-width: none;
-}
-.pswp--animate_opacity {
-  transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
-  opacity: 0.001;
-  will-change: opacity;
-}
-.pswp--open {
-  display: block;
-}
-.pswp--zoom-allowed .pswp__img {
-  cursor: zoom-in;
-}
-.pswp--zoomed-in .pswp__img {
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-.pswp--dragging .pswp__img {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-}
-.pswp__bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  opacity: 0;
-  background: #000;
-  -webkit-backface-visibility: hidden;
-  will-change: opacity;
-}
-.pswp__scroll-wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-.pswp__container,
-.pswp__zoom-wrap {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  -ms-touch-action: none;
-  touch-action: none;
-}
-.pswp__container,
-.pswp__img {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-touch-callout: none;
-}
-.pswp__zoom-wrap {
-  position: absolute;
-  width: 100%;
-  transition: -webkit-transform 333ms cubic-bezier(0.4, 0, 0.22, 1);
-  transition: transform 333ms cubic-bezier(0.4, 0, 0.22, 1);
-  transition: transform 333ms cubic-bezier(0.4, 0, 0.22, 1),
-    -webkit-transform 333ms cubic-bezier(0.4, 0, 0.22, 1);
-  -webkit-transform-origin: left top;
-  transform-origin: left top;
-}
-.pswp__bg {
-  transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
-  will-change: opacity;
-}
-.pswp--animated-in .pswp__bg,
-.pswp--animated-in .pswp__zoom-wrap {
-  transition: none;
-}
-.pswp__container,
-.pswp__zoom-wrap {
-  -webkit-backface-visibility: hidden;
-}
-.pswp__item {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-}
-.pswp__img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: auto;
-  height: auto;
-}
-.pswp__img--placeholder {
-  -webkit-backface-visibility: hidden;
-}
-.pswp__img--placeholder--blank {
-  background: #222;
-}
-.pswp--ie .pswp__img {
-  top: 0;
-  left: 0;
-  width: 100% !important;
-  height: auto !important;
-}
-.pswp__error-msg {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  margin-top: -8px;
-  text-align: center;
-  color: #ccc;
-  font-size: 14px;
-  line-height: 16px;
-}
-.pswp__error-msg a {
-  text-decoration: underline;
-  color: #ccc;
-} /*! PhotoSwipe Default UI CSS by Dmitry Semenov | photoswipe.com | MIT license */
-.pswp__button {
-  display: block;
-  position: relative;
-  float: right;
-  overflow: visible;
-  width: 44px;
-  height: 44px;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-  transition: opacity 0.2s;
-  opacity: 0.75;
-  border: 0;
-  background: none;
-  box-shadow: none;
-  -webkit-appearance: none;
-}
-.pswp__button:focus,
-.pswp__button:hover {
-  opacity: 1;
-}
-.pswp__button:active {
-  opacity: 0.9;
-  outline: none;
-}
-.pswp__button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-.pswp__ui--over-close .pswp__button--close {
-  opacity: 1;
-}
-.pswp__button,
-.pswp__button--arrow--left:before,
-.pswp__button--arrow--right:before {
-  width: 44px;
-  height: 44px;
-  background-size: 264px 88px;
-}
-@media (-webkit-min-device-pixel-ratio: 1.1),
-  (-webkit-min-device-pixel-ratio: 1.09375),
-  (min-resolution: 105dpi),
-  (min-resolution: 1.1dppx) {
-  .pswp--svg .pswp__button,
-  .pswp--svg .pswp__button--arrow--left:before,
-  .pswp--svg .pswp__button--arrow--left,
-  .pswp--svg .pswp__button--arrow--right {
-    background: none;
-  }
-}
-.pswp__button--close {
-  background-position: 0 -44px;
-}
-.pswp__button--share {
-  background-position: -44px -44px;
-}
-.pswp__button--fs {
-  display: none;
-}
-.pswp--supports-fs .pswp__button--fs {
-  display: block;
-}
-.pswp--fs .pswp__button--fs {
-  background-position: -44px 0;
-}
-.pswp__button--zoom {
-  display: none;
-  background-position: -88px 0;
-}
-.pswp--zoom-allowed .pswp__button--zoom {
-  display: block;
-}
-.pswp--zoomed-in .pswp__button--zoom {
-  background-position: -132px 0;
-}
-.pswp--touch .pswp__button--arrow--left,
-.pswp--touch .pswp__button--arrow--right {
-  visibility: hidden;
-}
-.pswp__button--arrow--left,
-.pswp__button--arrow--right {
-  position: absolute;
-  top: 50%;
-  width: 70px;
-  height: 100px;
-  margin-top: -50px;
-  background: none;
-}
-.pswp__button--arrow--left {
-  left: 0;
-}
-.pswp__button--arrow--right {
-  right: 0;
-}
-.pswp__button--arrow--left:before,
-.pswp__button--arrow--right:before {
-  position: absolute;
-  top: 35px;
-  width: 32px;
-  height: 30px;
-  content: "";
-  background-color: rgba(0, 0, 0, 0.3);
-}
-.pswp__button--arrow--left:before {
-  left: 6px;
-  background-position: -138px -44px;
-}
-.pswp__button--arrow--right:before {
-  right: 6px;
-  background-position: -94px -44px;
-}
-.pswp__counter,
-.pswp__share-modal {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.pswp__share-modal {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  transition: opacity 0.25s ease-out;
-  opacity: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1600;
-  -webkit-backface-visibility: hidden;
-  will-change: opacity;
-}
-.pswp__share-modal--hidden {
-  display: none;
-}
-.pswp__share-tooltip {
-  display: block;
-  position: absolute;
-  top: 56px;
-  right: 44px;
-  width: auto;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  transition: -webkit-transform 0.25s;
-  transition: transform 0.25s;
-  transition: transform 0.25s, -webkit-transform 0.25s;
-  -webkit-transform: translateY(6px);
-  transform: translateY(6px);
-  border-radius: 2px;
-  background: #fff;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
-  z-index: 1620;
-  -webkit-backface-visibility: hidden;
-  will-change: transform;
-}
-.pswp__share-tooltip a {
-  display: block;
-  padding: 0.5rem 1.5rem;
-  text-decoration: none;
-  color: #868e96;
-  font-size: 14px;
-  line-height: 18px;
-}
-.pswp__share-tooltip a:hover {
-  text-decoration: none;
-  color: #bcac76;
-}
-.pswp__share-tooltip a:first-child {
-  border-radius: 2px 2px 0 0;
-}
-.pswp__share-tooltip a:last-child {
-  border-radius: 0 0 2px 2px;
-}
-.pswp__share-modal--fade-in {
-  opacity: 1;
-}
-.pswp__share-modal--fade-in .pswp__share-tooltip {
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-}
-.pswp--touch .pswp__share-tooltip a {
-  padding: 16px 12px;
-  color: #868e96;
-}
-.pswp__counter {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 44px;
-  padding: 0 10px;
-  opacity: 0.75;
-  color: #fff;
-  font-size: 13px;
-  line-height: 44px;
-}
-.pswp__caption {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  min-height: 44px;
-}
-.pswp__caption small {
-  color: #bbb;
-  font-size: 11px;
-}
-.pswp__caption__center {
-  max-width: 420px;
-  margin: 0 auto;
-  padding: 10px;
-  text-align: left;
-  color: #ccc;
-  font-size: 13px;
-  line-height: 20px;
-}
-.pswp__caption--empty {
-  display: none;
-}
-.pswp__caption--fake {
-  visibility: hidden;
-}
-.pswp__preloader {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 44px;
-  height: 44px;
-  margin-left: -22px;
-  transition: opacity 0.25s ease-out;
-  opacity: 0;
-  will-change: opacity;
-  direction: ltr;
-}
-.pswp__preloader__icn {
-  width: 20px;
-  height: 20px;
-  margin: 12px;
-}
-.pswp__preloader--active {
-  opacity: 1;
-}
-.pswp--css_animation .pswp__preloader--active {
-  opacity: 1;
-}
-.pswp--css_animation .pswp__preloader--active .pswp__preloader__icn {
-  -webkit-animation: clockwise 500ms linear infinite;
-  animation: clockwise 500ms linear infinite;
-}
-.pswp--css_animation .pswp__preloader--active .pswp__preloader__donut {
-  -webkit-animation: donut-rotate 1000ms cubic-bezier(0.4, 0, 0.22, 1) infinite;
-  animation: donut-rotate 1000ms cubic-bezier(0.4, 0, 0.22, 1) infinite;
-}
-.pswp--css_animation .pswp__preloader__icn {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  width: 14px;
-  height: 14px;
-  margin: 0;
-  opacity: 0.75;
-  background: none;
-}
-.pswp--css_animation .pswp__preloader__cut {
-  position: relative;
-  overflow: hidden;
-  width: 7px;
-  height: 14px;
-}
-.pswp--css_animation .pswp__preloader__donut {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-sizing: border-box;
-  width: 14px;
-  height: 14px;
-  margin: 0;
-  border: 2px solid #fff;
-  border-bottom-color: transparent;
-  border-left-color: transparent;
-  border-radius: 50%;
-  background: none;
-}
-@media screen and (max-width: 1024px) {
-  .pswp__preloader {
-    position: relative;
-    top: auto;
-    left: auto;
-    float: right;
-    margin: 0;
-  }
-}
 @-webkit-keyframes clockwise {
   0% {
     -webkit-transform: rotate(0deg);
@@ -12398,62 +11964,6 @@ select.selectpicker {
     -webkit-transform: rotate(0);
     transform: rotate(0);
   }
-}
-.pswp__ui {
-  visibility: visible;
-  opacity: 1;
-  -webkit-font-smoothing: auto;
-  z-index: 1550;
-}
-.pswp__top-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 44px;
-}
-.pswp__caption,
-.pswp__top-bar,
-.pswp--has_mouse .pswp__button--arrow--left,
-.pswp--has_mouse .pswp__button--arrow--right {
-  transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
-  will-change: opacity;
-}
-.pswp--has_mouse .pswp__button--arrow--left,
-.pswp--has_mouse .pswp__button--arrow--right {
-  visibility: visible;
-}
-.pswp__top-bar,
-.pswp__caption {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.pswp__ui--fit .pswp__top-bar,
-.pswp__ui--fit .pswp__caption {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-.pswp__ui--idle .pswp__top-bar {
-  opacity: 0;
-}
-.pswp__ui--idle .pswp__button--arrow--left,
-.pswp__ui--idle .pswp__button--arrow--right {
-  opacity: 0;
-}
-.pswp__ui--hidden .pswp__top-bar,
-.pswp__ui--hidden .pswp__caption,
-.pswp__ui--hidden .pswp__button--arrow--left,
-.pswp__ui--hidden .pswp__button--arrow--right {
-  opacity: 0.001;
-}
-.pswp__ui--one-slide .pswp__button--arrow--left,
-.pswp__ui--one-slide .pswp__button--arrow--right,
-.pswp__ui--one-slide .pswp__counter {
-  display: none;
-}
-.pswp__element--disabled {
-  display: none !important;
-}
-.pswp--minimal--dark .pswp__top-bar {
-  background: none;
 }
 .card {
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
@@ -13292,4 +12802,8 @@ img.bg-image {
   user-select: none;
   text-transform: uppercase;
   transition: all 0.25s ease-out;
+}
+
+footer p {
+  margin: 0px;
 }
